			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: Make safe signal handling possible from various blocking I/O
    operations, expanding the useability of call_with_tim_limit/2.

  * ENHANCED: Use Richard O'Keefe's natural merge-sort for sort/2, msort/2
    and keysort/2.  More space efficient.  As good as the best qsort()
    from libc and replaces old slow keysort with an efficient alternative.

  * ENHANCED: make == and \== last-argument-tail-recursive, so they apply
    to arbitrary long lists.

  * FIXED: Bug#32: A number of issues around unloading shared objects.
    Mike Elston.

  * FIXED: Avoid tracing the $aborted exception.

  * FIXED: Call stack-shifter when low on stack in built-in sort/1.
    Only applies to systems where mmap() doesn't work or isn't detected
    properly. Richard O'Keefe.  

  * FIXED: Bug#29: PLWIN.EXE console scrinks one row each invocation.
    Holger Kanwischer.

  * ADDED: PLWIN.EXE: make tty_size/2 return the window size in rows and
    columns.

  * FIXED: Bug#30: calling halt/0 and friends from `sub-threads' now causes
    a permission error.  This isn't perfect, but better than an uncontrolled
    crash.  Joachim Katzer.

  * PORT: Fixed various problems on SGI (IRIX 6.5), including realisation
    of dynamic stacks based on MAP_AUTOGROW|MAP_AUTORESRV.  Thanks to
    Matthijs Mourits for providing me with access to his machine.

  * FIXED: only open /dev/zero once in multi-threaded version where
    MAP_ANON is not supported.


VERSION 5.1.9 (Mar 06, 2003)
============================

  * ENHANCED: Check for instantiation errors in send_list/[2,3].  Anjo
    Anjewierden.

  * ENHANCED: Use a key	to speedup searching for potentionally matching
    messages in long message queues.
