@@ -510,3 +510,4 @@
 #define ATOM_zero_divisor MK_ATOM(509)
 #define ATOM_halt         MK_ATOM(510)
 #define ATOM_key_value_pair MK_ATOM(511)
+#define ATOM_system_thread_id MK_ATOM(512)
