@@ -249,7 +249,7 @@ int			PL_mutex_lock(struct pl_mutex *m);
 int			PL_mutex_unlock(struct pl_mutex *m);
 int			PL_thread_raise(int tid, int sig);
 void			cleanupThreads();
-
+long			system_thread_id(PL_thread_info_t *info);
 
 		 /*******************************
 		 *	 GLOBAL GC SUPPORT	*
